# HumanizedSeleniumScraper

./: .gitignore  ARCHIVE.md  CONTRIBUTING.md  HumanizedSeleniumScraper.py  Makefile  README.md  SECURITY.md  example_search_spec.toml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
docs/: REPO_MAP.md  RUNBOOK.md  ci-audit.md  ci-decision.md  ci.md
humanized_selenium_scraper/: cli.py  config.py  driver.py  extract_selenium.py  extract_text.py  human.py  io.py  relevance.py  scraper.py  selenium_ops.py  spec.py  url_filter.py
tests/: test_cli_run.py  test_config.py  test_extract_text.py  test_logging_utils.py  test_relevance.py  test_spec.py  test_spec_toml.py  test_url_filter.py
